Cards e Header feitos

--- a/index.html
+++ b/index.html
@@ -3,20 +3,214 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Glossário | 8B</title>
 </head>
 <body>
     <header>
-        <h1>Glossario de Astronomia  |  8b</h1>
-        <p>Participantes: Kauan Alves</p>
+        <div class="logo">
+            <a href="#">
+                <img src="images/logo.png" alt="">
+            </a>
+            <h1>
+                Glossário Astronomia
+            </h1>
+        </div>
+        <div class="button">
+            <ul>
+                    <a href="#participantes">
+                        <li>
+                            participantes
+                        </li>
+                    </a>
+            </ul>
+        </div>
     </header>
     <main>
-        <ul>
-            <li>A</li>
-            <li>B</li>
-            <li>C</li>
-        </ul>
+        <div class="card">
+            <div class="card-top">
+                <h2>Astronomia</h2>
+            </div>
+            <div class="img1"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Aurora Boreal</h2>
+            </div>
+            <div class="img2"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Cometa</h2>
+            </div>
+            <div class="img3"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Eclipse</h2>
+            </div>
+            <div class="img4"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Estrelas</h2>
+            </div>
+            <div class="img5"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Foguete</h2>
+            </div>
+            <div class="img6"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Galaxia</h2>
+            </div>
+            <div class="img7"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Lua</h2>
+            </div>
+            <div class="img8"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Meteoro</h2>
+            </div>
+            <div class="img9"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam? l</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Nasa</h2>
+            </div>
+            <div class="img10"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Planeta</h2>
+            </div>
+            <div class="img11"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Pulsar</h2>
+            </div>
+            <div class="img12"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Quasar</h2>
+            </div>
+            <div class="img13"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Satélite</h2>
+            </div>
+            <div class="img14"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Sistema Solar</h2>
+            </div>
+            <div class="img15"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Sol</h2>
+            </div>
+            <div class="img16"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>SpaceX</h2>
+            </div>
+            <div class="img17"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Universo</h2>
+            </div>
+            <div class="img18"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Uranografia</h2>
+            </div>
+            <div class="img19"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-top">
+                <h2>Via Láctea</h2>
+            </div>
+            <div class="img20"></div>
+            <div class="card-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            </div>
+        </div>
     </main>
+    <section id="participantes" class="participantes">
+        <h3>Participantes</h3>
+    </section>
 </body>
 </html>
