--- a/index.html
+++ b/index.html
@@ -211,6 +211,50 @@
     </main>
     <section id="participantes" class="participantes">
         <h3>Participantes</h3>
+        <div class="cards-participantes">
+            <div class="card-par">
+                <div class="par1"></div>
+                <div class="card-top">
+                    <h2>Gabriel Santos</h2>
+                </div>
+                <div class="card-bottom">
+                    <ul>
+                        <li>Numero: 14</li>
+                        <li>RA: 113197243</li>
+                        <li>Dígito: 0</li>
+                        <li>Responsável por: <br> Elaboração de conteúdo</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card-par">
+                <div class="par2"></div>
+                <div class="card-top">
+                    <h2>Kauan Alves</h2>
+                </div>
+                <div class="card-bottom">
+                    <ul>
+                        <li>Numero: 21</li>
+                        <li>RA: 113800981</li>
+                        <li>Dígito: 7</li>
+                        <li>Responsável por: <br> Estruturar e programar site</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card-par">
+                <div class="par3"></div>
+                <div class="card-top">
+                    <h2>Luciano dos Santos</h2>
+                </div>
+                <div class="card-bottom">
+                    <ul>
+                        <li>Numero: 23</li>
+                        <li>RA: 115023541</li>
+                        <li>Dígito: X</li>
+                        <li>Responsável por: <br> Revisar conteúdo e imagens</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
