update na responsividade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="images/logo.png" alt="">
             </a>
             <h1>
-                Glossário Astronomia
+                Glossário 8b
             </h1>
         </div>
         <div class="button">
@@ -34,7 +34,7 @@
             </div>
             <div class="img1"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Astronomia é a ciência que estuda os astros/corpos celestes (como estrelas, planetas, cometas, galáxias, etc.). Existem dois tipos de astronomia, a astronomia teórica e a observacional.</p>
             </div>
         </div>
         <div class="card">
