--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <p>&copy; todos direitos reservados a <a href="https://github.com/KauanAlvz" target="_blank">@KauAlvz</a></p>
+        </footer>
     </section>
 </body>
 </html>
