--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             </div>
             <div class="img2"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+            <p>Aurora Boreal é um fenômeno astronômico que ocorre somente no hemisfério norte do planeta. Ele é caracterizado pela formação de luzes coloridas no céu.
+            </p>    
             </div>
         </div>
         <div class="card">
@@ -52,7 +53,8 @@
             </div>
             <div class="img3"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Cometas são pequenos objetos astronômicos e são formados de gelo e poeira. Devido a ação dos ventos solares, criam-se uma "cauda" neles.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -61,7 +63,7 @@
             </div>
             <div class="img4"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Eclipse é um evento astronômico que ocorre quando um corpo celeste fica na frente de outro causador de luz, como estrelas. Assim causando um efeito visual.</p>
             </div>
         </div>
         <div class="card">
@@ -70,7 +72,7 @@
             </div>
             <div class="img5"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Estrelas são objetos astronômicos feitos de plasma que emitem sua própria luz, calor, etc. devido as fusões nucleares que ocorrem em seu interior.</p>
             </div>
         </div>
         <div class="card">
@@ -79,7 +81,7 @@
             </div>
             <div class="img6"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Foguetes são um meio de transporte movido a jato que é capaz de trazer pessoas ou satélites para fora da atmosfera da Terra.</p>
             </div>
         </div>
         <div class="card">
@@ -88,7 +90,8 @@
             </div>
             <div class="img7"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Galáxias são sistemas que podem ter de milhares a trilhões de objetos astronômicos. São caracterizadas por sua forma espiral, mas também poder ter formas irregulares.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -97,7 +100,8 @@
             </div>
             <div class="img8"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>A Lua é o único satélite natural da terra e o quinto maior do sistema solar. Por ter uma única atmosfera, chamada exosfera, vários corpos celestes já impactaram sua superfície, o que causa suas características físicas.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -106,7 +110,7 @@
             </div>
             <div class="img9"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam? l</p>
+                <p>O meteoro é um fenômeno luminoso que ocorre quando algum fragmento de um corpo celeste entra na atmosfera da Terra.</p>
             </div>
         </div>
         <div class="card">
@@ -115,7 +119,7 @@
             </div>
             <div class="img10"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Administração Nacional da Aeronáutica e Espaço é uma agência espacial estadunidense responsável por desenvolver tecnologias espaciais. Ela foi fundada durante a guerra fria, com objetivo de vencer a corrida especial.</p>
             </div>
         </div>
         <div class="card">
@@ -124,7 +128,7 @@
             </div>
             <div class="img11"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Os planetas são objetos espaciais que giram em torno de uma estrela maior, tem gravidade própria e não tem sua rotação influenciada por nenhum outro corpo celeste.</p>
             </div>
         </div>
         <div class="card">
@@ -133,7 +137,7 @@
             </div>
             <div class="img12"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Pulsares são um dos possíveis estágios finais de estrelas, eles acontecem quando as estrelas colapsam e, por causa de seu forte campo magnético, transformam energia rotacional em energia eletromagnética.</p>
             </div>
         </div>
         <div class="card">
@@ -142,7 +146,8 @@
             </div>
             <div class="img13"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Quasar, ou fontes de rádio quase estrelares são buracos negros super massivos com gases e poeiras espaciais em volta dele.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -151,7 +156,7 @@
             </div>
             <div class="img14"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Um satélite é qualquer corpo celeste que órbita em torno de outro corpo celeste. Existem dois tipos de satélites, os naturais, que são objetos espaciais, e os artificiais, que são feitos pelos seres humanos.</p>
             </div>
         </div>
         <div class="card">
@@ -160,7 +165,8 @@
             </div>
             <div class="img15"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>É um conjunto de planetas e outros corpos celestes que estão gravitacionalmente em domínio de uma estrela.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -169,7 +175,8 @@
             </div>
             <div class="img16"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>O Sol é a estrela mais próxima da terra e a estrela que forma o sistema solar. Ele é responsável pelos eclipses que vemos, pelos dias e noites, pelas estações do ano, etc.
+                </p>
             </div>
         </div>
         <div class="card">
@@ -178,7 +185,7 @@
             </div>
             <div class="img17"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>A SpaceX é uma fabricante de foguetes, satélites, e outros sistemas aeroespaciais. Ela tem como objetivo revolucionar o desenvolvimento tecnológico aeroespcial reduzindo custos e aumentando sua eficiência.</p>
             </div>
         </div>
         <div class="card">
@@ -187,7 +194,7 @@
             </div>
             <div class="img18"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>Um conjunto de objetos astronômicos e fenômenos astronômicos. Que reúne galáxias, planetas, estrelas, nebulosas, cometas, satélites, buracos negros, pulsares, etc.</p>
             </div>
         </div>
         <div class="card">
@@ -196,7 +203,7 @@
             </div>
             <div class="img19"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>A ciência que tem como o objetivo descrever e estudar objetos e fenômenos astronômicos.</p>
             </div>
         </div>
         <div class="card">
@@ -205,7 +212,7 @@
             </div>
             <div class="img20"></div>
             <div class="card-bottom">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non dicta et labore doloremque corporis, obcaecati alias. Quis illo, dolore, corrupti eligendi optio beatae id culpa iste, alias itaque quibusdam?</p>
+                <p>A Via Láctea é uma galáxia onde nosso sistema solar se encontra. Ela tem um formato como de uma espiral, sabemos de seu formato observando seus corpos celestes.</p>
             </div>
         </div>
     </main>
